--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: DierckxSpline
 Type: Package
 Title: R companion to "Curve and Surface Fitting with Splines"
-Version: 1.0-7
+Version: 1.0-9
 Date: 2007-7-31
 Author: Sundar Dorai-Raj
 Maintainer: Sundar Dorai-Raj <sundar.dorai-raj@pdf.com>
@@ -9,4 +9,4 @@ Description: This package provides a wrapper to the FITPACK routines written by 
 License: GPL (>= 2)
 Depends: R (>= 2.4.0), stats, lattice 
 Suggests: fda, splines
-Packaged: Tue Jan  1 15:28:28 2008; hornik
+Packaged: Sat Jan 12 22:03:57 2008; spencerg
