--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: DierckxSpline
 Type: Package
 Title: R companion to "Curve and Surface Fitting with Splines"
-Version: 1.1-5
+Version: 1.1-8
 Date: 2009-01-17
 Author: Sundar Dorai-Raj and Spencer Graves
 Maintainer: Spencer Graves <spencer.graves@prodsyse.com>
@@ -9,14 +9,15 @@ Description: This package provides a wrapper to the FITPACK routines
         written by Paul Dierckx. The original Fortran is available from
         http://www.netlib.org/dierckx 2012.02.15: This package is
         broken.  Currently, it seems NOT to have any users and is not
-        worth fixing.  Dierckx's FITPACK is over 20 years old and seems
-        to be obsolete.  If you want to fix it, I'm happy to make you
-        the maintainer.  Spencer Graves
+        worth fixing.  These FITPACK routines are over 20 years old and
+        may be obsolete.  If you want to fix it, I will happily make
+        you the maintainer.  Spencer Graves
 License: GPL (>= 2)
-Depends: R (>= 2.4.0), stats, lattice, PolynomF
-Suggests: fda, splines
-Packaged: 2012-04-03 12:12:48 UTC; rforge
+Depends: R (>= 2.4.0), stats, lattice, PolynomF, fda
+Suggests: splines
+Packaged: 2013-01-21 15:15:21 UTC; rforge
 Repository: CRAN
 Repository/R-Forge/Project: dierckxspline
-Repository/R-Forge/Revision: 42
-Date/Publication: 2012-05-06 06:57:50
+Repository/R-Forge/Revision: 50
+Repository/R-Forge/DateTimeStamp: 2013-01-21 11:09:11
+Date/Publication: 2013-01-21 20:02:39
